Thu Jul 30 21:48:56 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* random.c (init_genrand): ensure invariant of mt->next and mt->left.
	  mt->next should always equal mt->state + N + 1 - mt->left.
	  In fact, 'r = Random.new(0); r == r.dup' has returned false.

Thu Jul 30 21:43:41 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* random.c (random_bytes): use NUM2LONG instead of FIX2LONG because
	  Random#bytes may receive bignum.

Thu Jul 30 21:39:42 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (iseq_compile_each): fix stack consistency error.
	  [ruby-core:24611]

	* bootstraptest/test_method.rb: add tests for above.

Thu Jul 30 18:39:39 2009  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* transcode.c: added check for frozen string for encode! (see Bug #1836)

	* test/ruby/test_transcode.rb: added tests for the above

Thu Jul 30 16:45:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (defineclass): preserve encoding of class/module
	  names.  [ruby-core:24600]

	* variable.c (rb_set_class_path_string): set class path with a
	  string value.

Thu Jul 30 16:12:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (Init_var_tables): initializes __classid__ ID.

	* variable.c: use st_data_t for st functions.

Thu Jul 29 14:25:14 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/util.rb (CGI::unescape): support encoding option.

	* lib/cgi/cookie.rb (CGI::Cookie.parse): fix for the encoded value.

Wed Jul 29 08:08:07 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (regexp): regexp literal at the top of dstr is still needed
	  even if it is empty.

Wed Jul 29 03:36:24 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/json/lib/json/common.rb (JSON#recurse_proc): remove
	  unnecessary private specifier.  [ruby-dev:38929]

Wed Jul 29 03:34:46 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, vm_insnhelper.c (vm_call_method): revive
	  VM_CALL_OPT_SEND_BIT and use it to recognize "send" method.
